<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">


        <TextView
            android:id="@+id/tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:text="@string/id"
            android:maxLines="3"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:text="@string/name"
            android:maxLines="3"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:text="@string/mobile"
            android:maxLines="3"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:text="@string/email"
            android:maxLines="3"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/update"
            android:textColor="@color/white"
            />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/delete"
            android:textColor="@color/white" />

        </LinearLayout>




</LinearLayout>