<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppTheme"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        app:lottie_rawRes="@raw/loading"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupLayoutNameInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/signupLayoutNumberInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:ellipsize="start"
            android:hint="@string/name"
            android:layout_margin="2dp"
            android:textColor="@color/purple_500"
            android:inputType="textPersonName"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            app:layout_constraintWidth_percent="0.8" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupLayoutNumberInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/signupLayoutEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:ellipsize="start"
            android:hint="@string/mobile"
            android:textColor="@color/purple_500"
            android:inputType="phone"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            app:layout_constraintWidth_percent="0.8" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupLayoutEmailInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/signupLayoutPasswordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:ellipsize="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            app:layout_constraintWidth_percent="0.8" />
    </com.google.android.material.textfield.TextInputLayout>




    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/signupLayoutEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLayoutNameInput"
        app:layout_constraintVertical_bias="0.921" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_text_bg"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:flow_lastHorizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLayoutPasswordInput"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.8" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        />





</LinearLayout>